tests/reference/ast-init1-a99a704.stderr
syntax error: Invalid syntax for variable initialization (try inserting '::' after the type)
 --> tests/errors/init1.f90:2:1
  |
2 | integer x = 1
  | ^^^^^^^^^^^^^ 
